--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
